fix jupiter styling
adjust the styling so it overlaps correctly on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -149,6 +149,15 @@ p span{
   background-color: var(--body-color);
 }
 
+
+#jupiter-terminal{
+  position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  z-index: 1000;
+}
 /*=============== REUSABLE CSS CLASSES ===============*/
 /* .container {
   max-width: 1120px;
@@ -182,15 +191,6 @@ p span{
 
 .spacer{
   height: 6rem;
-}
-
-
-#jupiter-terminal {
-  background-color: var(--first-color);
-  padding: 1rem;
-  border-radius: 2rem;
-  /* width: 600px; */
-  /* height: 1200px; */
 }
 
 /*=============== HEADER & NAV ===============*/
